Ensures all headers are the same height, even when a CTA button is present. Creates new rollover and display style for CTA header buttons that break the plane of the image.

--- a/app/assets/stylesheets/affiliates.css
+++ b/app/assets/stylesheets/affiliates.css
@@ -5,7 +5,6 @@
 #affiliates .page-header {
   background: url('/images/affiliates-header.jpg') 80% center no-repeat;
   background-size: cover;
-  max-height: 500px;
 }
 
 #affiliates #tapestry {
