--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -5,7 +5,6 @@
 #home .page-header {
   background: url('/images/home-header-a.jpg') 50% center no-repeat;
   background-size: cover;
-  max-height: 500px;
 }
 
 #home .page-header .title {
