--- a/app/assets/stylesheets/pages.css
+++ b/app/assets/stylesheets/pages.css
@@ -5,7 +5,7 @@
 .page-header {
   margin-top: 5px;
   width: 100%;
-  height: 574px;
+  height: 500px;
   transition: height;
   -moz-transition-duration: .5s;
   -webkit-transition-duration: .5s;
