--- a/app/assets/stylesheets/resources.css
+++ b/app/assets/stylesheets/resources.css
@@ -5,7 +5,6 @@
 #resources .page-header {
   background: url('/images/resources-header.jpg') 80% center no-repeat;
   background-size: cover;
-  max-height: 500px;
 }
 
 #resources #tapestry {
