--- a/app/assets/stylesheets/variables.css
+++ b/app/assets/stylesheets/variables.css
@@ -7,6 +7,7 @@
   --light-black-color:      #2E2230;
   --gray-color:             #84848C;
   --light-gray-color:       #D0CED1;
+  --dark-white-color:       #F2F2F2;
   --white-color:            #FFFFFF;
                             
   --bright-green-color:     #2FC872;
